--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "diff": "tsc && cdk diff"
   },
   "devDependencies": {
-    "aws-cdk": "1.93.0",
     "@aws-cdk/assert": "1.93.0",
+    "@types/aws-lambda": "^8.10.72",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.93.0",
+    "dotenv": "^8.2.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "1.93.0",
+    "@aws-cdk/aws-cloudwatch-actions": "1.93.0",
+    "@aws-cdk/aws-lambda-destinations": "1.93.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.93.0",
     "@aws-cdk/aws-sns": "1.93.0",
     "@aws-cdk/aws-sns-subscriptions": "1.93.0",
     "@aws-cdk/aws-sqs": "1.93.0",
